# src/api/backoffice/docs/swagger.json
@@ -770,6 +770,42 @@
           }
         }
       }
+    },
+
+    "/backoffice/maintenances/delete": {
+      "delete": {
+        "tags": ["Maintenance"],
+        "summary": "deleta uma manutenção. (Caso esteja em uso apenas a marca como excluída FALTA FAZER).",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "maintenanceId": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/ServerMessage"
+          },
+          "400": {
+            "$ref": "#/components/responses/ServerMessage"
+          }
+        }
+      }
     }
   }
 }
